// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotifications renders correctly 1`] = `null`;

exports[`BannerNotifications renders correctly 2`] = `
<div
  className="wds-banner-notification__container "
>
  <div
    className="wds-banner-notification wds-message "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <svg
        className="wds-icon wds-icon-small"
      >
        <use
          xlinkHref="#wds-icons-flag-small"
        />
      </svg>
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a single message
    </span>
    <svg
      className="wds-icon wds-banner-notification__close wds-icon-tiny"
      onClick={[Function]}
    >
      <use
        xlinkHref="#wds-icons-cross-tiny"
      />
    </svg>
  </div>
</div>
`;

exports[`BannerNotifications renders correctly 3`] = `
<div
  className="wds-banner-notification__container "
>
  <div
    className="wds-banner-notification wds-message "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <svg
        className="wds-icon wds-icon-small"
      >
        <use
          xlinkHref="#wds-icons-flag-small"
        />
      </svg>
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a message
    </span>
    <svg
      className="wds-icon wds-banner-notification__close wds-icon-tiny"
      onClick={[Function]}
    >
      <use
        xlinkHref="#wds-icons-cross-tiny"
      />
    </svg>
  </div>
  <div
    className="wds-banner-notification wds-success "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <svg
        className="wds-icon wds-icon-small"
      >
        <use
          xlinkHref="#wds-icons-checkmark-circle-small"
        />
      </svg>
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a success
    </span>
    <svg
      className="wds-icon wds-banner-notification__close wds-icon-tiny"
      onClick={[Function]}
    >
      <use
        xlinkHref="#wds-icons-cross-tiny"
      />
    </svg>
  </div>
  <div
    className="wds-banner-notification wds-warning "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <svg
        className="wds-icon wds-icon-small"
      >
        <use
          xlinkHref="#wds-icons-alert-small"
        />
      </svg>
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a warning
    </span>
    <svg
      className="wds-icon wds-banner-notification__close wds-icon-tiny"
      onClick={[Function]}
    >
      <use
        xlinkHref="#wds-icons-cross-tiny"
      />
    </svg>
  </div>
  <div
    className="wds-banner-notification wds-alert "
  >
    <div
      className="wds-banner-notification__icon"
    >
      <svg
        className="wds-icon wds-icon-small"
      >
        <use
          xlinkHref="#wds-icons-error-small"
        />
      </svg>
    </div>
    <span
      className="wds-banner-notification__text"
    >
      this is a permanent alert
    </span>
  </div>
</div>
`;
